2000-08-31  Jeffrey Stedfast  <fejj@helixcode.com>

	* providers/imap/camel-imap-store.c (camel_imap_command_extended):
	Don't save any exceptions caused by camel_imap_folder_changed
	(camel_imap_fetch_command): Same.
	
	* providers/imap/camel-imap-folder.c (camel_imap_folder_changed):
	Using a new way of calculating the first recent message that seems
	more accurate. Also added code to make sure we don't accidently
	add a duplicate summary.

2000-08-31  Not Zed  <NotZed@HelixCode.com>

	* camel-mime-part.c (write_to_stream): Use the proper type
	checking function to check for text types.
	(write_to_stream): If we have a charset on a text type that
	isn't us-ascii or utf-8, then we need to reencode it, so add a
	filter to do that too.
	(write_to_stream): Fix some warnings/use the right constructor,
	oops.
	(write_to_stream): Rearrange the logic so it always does charset
	conversion, and not just if we have a qp/base64 block.

	* camel-mime-utils.c (append_latin1): New function - even though
	its broken, we'll assume mailers send latin1 headers instead of
	us-ascii.  We just have to encode high chars into utf-8.
	(header_decode_text): Call append_latin1 for appending unencoded
	text segments.
	(append_latin1): Do an additional mask for account for c's
	undefined behaviour for sign extension whilst shifting right.

2000-08-30  Jeffrey Stedfast  <fejj@helixcode.com>

	* providers/imap/camel-imap-store.c (camel_imap_fetch_command):
	Rewrote to ignore strings that look like server responses until it
	is sure that it has finished reading the literal string response.

2000-08-30  Jeffrey Stedfast  <fejj@helixcode.com>
	
	* camel-remote-store.c (remote_send_string): Don't wrap printed
	strings in quotes, makes things messy
	
	* providers/imap/camel-imap-folder.c (imap_get_message): Updated
	to use the camel_imap_fetch_command
	
	* providers/imap/camel-imap-stream.c (stream_read): Updated to use
	camel_imap_fetch_command
